--- a/cadastro.html
+++ b/cadastro.html
@@ -7,20 +7,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- TOPO -->
-  <header class="top-bar">
+  <!-- CABEÇALHO -->
+  <header>
     <div class="logo">
       <img src="logo.png" alt="Arena Store Logo">
-      <span>ARENA<br>STORE</span>
+      <span>ARENA STORE</span>
     </div>
-    <nav class="top-link">
-      <a href="Pagina_inicial.html">Home</a>
+    <nav>
+      <ul>
+        <li><a href="Pagina_inicial.html">Home</a></li>
+      </ul>
     </nav>
   </header>
 
   <!-- CONTEÚDO -->
-  <main>
-    <div class="form-container">
+  <main class="cadastro-container">
+    <div class="form-box">
       <h2>Cadastro</h2>
       <form>
         <label for="nome">Nome Completo</label>
