--- a/login.html
+++ b/login.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arena Store - Login</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arena Store - Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- FAIXA SUPERIOR -->
-  <header class="top-bar">
-    <div class="logo">
-      <img src="logo.png" alt="Arena Store Logo">
-      <span>ARENA<br>STORE</span>
-    </div>
-    <nav class="top-link">
-      <a href="Pagina_inicial.html">Home</a>
-    </nav>
-  </header>
 
-  <!-- CONTEÚDO PRINCIPAL -->
-  <main>
-    <div class="login-container">
-      <img src="logo.png" alt="Logo" class="login-logo">
-      <h2>Login</h2>
-      <form>
-        <input type="text" placeholder="Nome de Usuário" required>
-        <input type="password" placeholder="Senha" required>
-        <button type="submit">Entrar</button>
-      </form>
-      <div class="login-links">
-        <a href="cadastro.html">Criar conta</a>
-        <a href="trocar_senha.html">Esqueci a senha</a>
-      </div>
-    </div>
-  </main>
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Arena Store Logo">
+            <span>ARENA STORE</span>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="Pagina_inicial.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="login-container">
+        <div class="login-box">
+            <img src="logo.png" alt="Arena Store Logo" class="login-logo">
+            <h2>Login</h2>
+            <form>
+                <input type="text" placeholder="Nome de Usuário" required>
+                <input type="password" placeholder="Senha" required>
+                <button type="submit">Entrar</button>
+            </form>
+            <div class="links">
+                <a href="cadastro.html">Criar conta</a> · 
+                <a href="trocar_senha.html">Esqueceu a Senha?</a>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
