--- a/Pagina_inicial.html
+++ b/Pagina_inicial.html
@@ -40,7 +40,115 @@
         </div>
     </section>
 
-    <!-- Benefícios -->
+
+<!-- Produtos Mais Vendidos -->
+<section id="colecao" class="produtos">
+  <h2>As Mais Vendidas!</h2>
+  <div class="carrossel">
+    <div class="linha-produtos">
+      <div class="card">
+        <img src="imagens acessorios/10 (1).png" alt="Produto 1">
+        <p>R$215,00</p>
+        <small>3x de R$85,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens camisar/brasil (1).png" alt="Produto 2">
+        <p>R$252,00</p>
+        <small>3x de R$85,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens chuteiras/3 (1).png" alt="Produto 3">
+        <p>R$252,00</p>
+        <small>3x de R$85,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens camisar/5.png" alt="Produto 4">
+        <p>R$189,00</p>
+        <small>3x de R$63,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens chuteiras/6.png" alt="Produto 5">
+        <p>R$310,00</p>
+        <small>5x de R$62,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens camisar/7.png" alt="Produto 6">
+        <p>R$279,00</p>
+        <small>4x de R$69,75 sem juros</small>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- Lançamentos -->
+<section class="lancamentos">
+  <h2>Lançamentos</h2>
+  <div class="carrossel">
+    <div class="linha-produtos">
+      <div class="card">
+        <img src="imagens camisar/4.png" alt="Produto 7">
+        <p>R$210,00</p>
+        <small>3x de R$70,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens camisar/3.png" alt="Produto 8">
+        <p>R$239,00</p>
+        <small>3x de R$79,67 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens camisar/1.png" alt="Produto 9">
+        <p>R$260,00</p>
+        <small>4x de R$65,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens chuteiras/2.png" alt="Produto 10">
+        <p>R$329,00</p>
+        <small>5x de R$65,80 sem juros</small>
+        <button>Comprar</button>
+      </div>
+      <div class="card">
+        <img src="imagens chuteiras/8.png" alt="Produto 11">
+        <p>R$340,00</p>
+        <small>5x de R$68,00 sem juros</small>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </div>
+  <a href="todos_produtos.html" class="botao">Ver Todos os Produtos</a>
+</section>
+
+    <!-- Banner do Flamengo -->
+    <section class="banner-flamengo">
+        <div class="texto-banner">
+            <h2>O MANTO VIROU PATRIMÔNIO</h2>
+            <p>Chegou a nova camisa 3 do Flamengo. A história da Nação estampada no peito.</p>
+            <a href="" class="botao-branco">Garanta o seu</a>
+        </div>
+    </section>
+
+    
+    <!-- Sobre a Arena Store -->
+    <section class="sobre">
+        <div class="texto-sobre">
+            <h2><span class="destaque">Arena Store</span></h2>
+            <p>É um e-commerce multiesportivo especializado na comercialização de uma vasta gama de produtos oficiais de diversas modalidades. Nosso foco principal reside em atender à demanda de fãs e praticantes de esportes, oferecendo itens autênticos e de alta qualidade.</p>
+            <p>Ao se posicionar como uma multiesportiva, a Arena Store atende a um público diversificado, desde o torcedor fanático que quer a nova camisa do time até o atleta amador em busca de equipamentos específicos para seu treino.</p>
+        </div>
+        <div class="imagem-sobre">
+            <img src="logo.png" alt="Arena Store">
+        </div>
+    </section>
+<!-- Benefícios -->
     <section class="beneficios">
         <div class="beneficio">
             <h3>🚚 Frete Grátis</h3>
@@ -60,69 +168,6 @@
         </div>
     </section>
 
-    <!-- Produtos Mais Vendidos -->
-    <section id="colecao" class="produtos">
-        <h2>As Mais Vendidas!</h2>
-        <div class="linha-produtos">
-            <div class="card">
-                <img src="imagens acessorios/10 (1).png" alt="Produto 1">
-                <p>R$215,00</p>
-                <small>3x de R$85,00 sem juros</small>
-                <button>Comprar</button>
-            </div>
-            <div class="card">
-                <img src="imagens camisar/brasil (1).png" alt="Produto 2">
-                <p>R$252,00</p>
-                <small>3x de R$85,00 sem juros</small>
-                <button>Comprar</button>
-            </div>
-            <div class="card">
-                <img src="imagens chuteiras/3 (1).png" alt="Produto 3">
-                <p>R$252,00</p>
-                <small>3x de R$85,00 sem juros</small>
-                <button>Comprar</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Lançamentos -->
-    <section class="lancamentos">
-        <h2>Lançamentos</h2>
-        <div class="linha-produtos">
-            <div class="card">
-                <img src="imagens camisar/4.png" alt="Produto 4">
-            </div>
-            <div class="card">
-                <img src="imagens camisar/3.png" alt="Produto 5">
-            </div>
-            <div class="card">
-                <img src="imagens camisar/1.png" alt="Produto 6">
-            </div>
-        </div>
-        <a href="todos_produtos.html" class="botao">Ver Todos os Produtos</a>
-    </section>
-
-    <!-- Banner do Flamengo -->
-    <section class="banner-flamengo">
-        <div class="texto-banner">
-            <h2>O MANTO VIROU PATRIMÔNIO</h2>
-            <p>Chegou a nova camisa 3 do Flamengo. A história da Nação estampada no peito.</p>
-            <a href="" class="botao-branco">Garanta o seu</a>
-        </div>
-    </section>
-
-    <!-- Sobre a Arena Store -->
-    <section class="sobre">
-        <div class="texto-sobre">
-            <h2><span class="destaque">Arena Store</span></h2>
-            <p>É um e-commerce multiesportivo especializado na comercialização de uma vasta gama de produtos oficiais de diversas modalidades. Nosso foco principal reside em atender à demanda de fãs e praticantes de esportes, oferecendo itens autênticos e de alta qualidade.</p>
-            <p>Ao se posicionar como uma multiesportiva, a Arena Store atende a um público diversificado, desde o torcedor fanático que quer a nova camisa do time até o atleta amador em busca de equipamentos específicos para seu treino.</p>
-        </div>
-        <div class="imagem-sobre">
-            <img src="logo.png" alt="Arena Store">
-        </div>
-    </section>
-
     <!-- Rodapé -->
     <footer>
         <div class="footer-content">
@@ -136,6 +181,10 @@
             <p class="inicio"><a href="Pagina_inicial.html">Início</a></p>
         </div>
     </footer>
+
+
+<script src="js/pagina_inicial.js"></script>
+
 
 </body>
 </html>
